# elasticbeanstalk-websocket-test

./: Dockerfile  README.md  application.py  pyproject.toml  requirements.txt
