[tool.poetry]
name = "elasticbeanstalk-websocket-test"
version = "0.1.0"
description = ""
authors = ["Robert Knight <robertknight@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^12.0"


[tool.poetry.group.dev.dependencies]
awsebcli = "^3.20.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
